--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@
             </a>
         </p>
       </div>
+      <p>
+        Johannes is a seasoned software engineer, entrepreneur and product manager with a strong focus on building and scaling products that make a difference. He has a proven track record in leading teams, driving innovation, and delivering high-quality software solutions.
+      </p>
       <h2>Work Experience</h2>
       <table class="table cv">
         <tr>
-          <td>2019/06&thinsp;&ndash;&thinsp;today</td>
+          <td>2019/06&thinsp;&ndash;&thinsp;Present</td>
           <td>
             <strong>Co-Founder & CTO</strong>, <a href="//www.voiio.de/" target="_blank" class="vitapop" data-original-title="voiio GmbH" data-content="voiio is poviding family services to work-life balance conscious companies.">voiio</a>
             <ul>
@@ -83,7 +86,7 @@
           </td>
         </tr>
         <tr>
-          <td>2011/09&thinsp;&ndash;&thinsp;today</td>
+          <td>2011/09&thinsp;&ndash;&thinsp;Present</td>
           <td>
             <strong>Consulting Advisor</strong>, <em>Telekom, Rentrop Group, Momox, IVT, more&hellip;</em>
             <ul>
@@ -98,6 +101,7 @@
             <ul>
               <li>in-house consulting position reporting directly to the CEO</li>
               <li>restructuring the customer service organization</li>
+              <li>implement process standards and slice Service TTR</li>
             </ul>
           </td>
         </tr>
@@ -107,7 +111,7 @@
             <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo (exit)</a>
             <ul>
               <li>responsible for the software engineer, reporting to the CTO</li>
-              <li>leading multiple teams: Android, Backend & Frontend</li>
+              <li>managing multiple teams: Android, Backend & Frontend</li>
               <li>hyperscaling Thermondo from 20 to 800 people</li>
             </ul>
           </td>
@@ -176,9 +180,9 @@
           <dl>
             <dt>German (C2)</dt>
             <dt>English (C2)</dt>
-            <dt>Python (S)</dt>
-            <dt>JavaScript (A)</dt>
-            <dt>C++, Java (B)</dt>
+            <dt>Python</dt>
+            <dt>JavaScript</dt>
+            <dt>C++ & Java</dt>
           </dl>
         </div>
         <div>
@@ -240,10 +244,11 @@
         <footer class="blockquote-footer">Dr. Philipp Offermann (Product Manager @ Telekom Innovation Labs)</footer>
       </blockquote>
 
+      <h2>Nerd Street Cred</h2>
       <a href="https://green-wall.leoku.dev/share/codingjoe?start=2014&showSafariHeader=false&showAttribution=false" target="_blank" style="margin: 0 -1.5rem; display: flex; flex-direction: row; align-items: flex-start">
-      <img alt="GitHub contribution stats" src="https://github-readme-stats.vercel.app/api?username=codingjoe&include_all_commits=true&hide_border=true&theme=transparent&title_color=1b1e21&ring_color=2f80ed&text_color=696969" style="margin-right: -3rem">
-      <img alt="GitHub contribution stats" src="https://github-readme-stats.vercel.app/api/top-langs/?username=codingjoe&layout=compact&include_all_commits=true&hide_border=true&theme=transparent&title_color=1b1e21&text_color=696969">
-        </a>
+        <img alt="GitHub contribution stats" src="https://github-readme-stats.vercel.app/api?username=codingjoe&include_all_commits=true&hide_border=true&theme=transparent&title_color=1b1e21&ring_color=2f80ed&text_color=696969" style="margin-right: -3rem">
+        <img alt="GitHub contribution stats" src="https://github-readme-stats.vercel.app/api/top-langs/?username=codingjoe&layout=compact&include_all_commits=true&hide_border=true&theme=transparent&title_color=1b1e21&text_color=696969">
+      </a>
 
 
     </section>
