--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="page-header" style="display: flex; justify-content: space-between">
         <h1 style="margin-block-end: 0">
           Johannes Maron<br>
-          <small>née Hoppe, 1988 Brandenburg (Havel), Germany</small>
+          <small>née Hoppe, Berlin, Germany</small>
         </h1>
         <p style="text-align: right;">
           <a href="tel:+4915114455910">
