--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <td>
             <strong>Co-Founder & CTO</strong>, <a href="//www.voiio.de/" target="_blank" class="vitapop" data-original-title="voiio GmbH" data-content="voiio is poviding family services to work-life balance conscious companies.">voiio</a>
             <ul>
-              <li>responsible for the B2C product development, platform operations & content creation</li>
+              <li>in charge of the development, production, and delivery of the B2C product</li>
               <li>leading multiple teams: Engineering, Content & Category-Management</li>
               <li>growing voiio from seed to profitability and from 0 to 50 people</li>
             </ul>
@@ -110,7 +110,7 @@
           <td>
             <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo (exit)</a>
             <ul>
-              <li>responsible for the software engineer, reporting to the CTO</li>
+              <li>spearheading software engineer reporting directly to the CTO</li>
               <li>managing multiple teams: Android, Backend & Frontend</li>
               <li>hyperscaling Thermondo from 20 to 800 people</li>
             </ul>
